--- a/doc/src/elo.tex
+++ b/doc/src/elo.tex
@@ -67,53 +67,53 @@ is given by $$S^{-1}(s)=-\frac{400}{\log10}\log\left(\frac1s-1\right).$$
 We make the language a little more rigorous. Let $X$ be a random variable taking
 the values $0$, $\frac12$ and $1$ with probabilities $l$, $d$ and $w$. Suppose that
 $x_1,...,x_N$ are independent observations of $X$. The maximum likelihood estimator
-$\hat s$ of $s=E(X)=\frac12d+w$ is given by $$\hat s=\frac1N\sum_{j=1}^Nx_j.$$
+$\hat s$ of $s=E(X)=\frac12d+w$ is given by $$\hat s=\frac1N\sum_{n=1}^Nx_n.$$
+If $\sigma^2$ is the variance of $X$, then the central limit theorem
+\cite{wikipedia_clt} asserts that $$\frac{\hat s-s}{\sigma/\sqrt{N}}$$ will approach
+$N(0,1)$ in distribution.
 
-If $\sigma^2$ is the variance of $X$, then by the Central Limit Theorem \cite{wikipedia_clt},
-we have
-$$\frac{\hat s-s}{\sigma/\sqrt{N}}\to N(0,1).$$ We want to construct a confidence interval
+We want to construct a confidence interval
 for $s$ of confidence grade $1-\alpha$. Let $\lambda_{\alpha/2}$ be the upper $\alpha/2$
-quantile of $N(0,1)$. Then $$\frac{\hat s-s}{\sigma/\sqrt{N}}\in\left(-\lambda_{\alpha/2},
-\lambda_{\alpha/2}\right)$$ with probability $1-\alpha$. Equivalently $$s\in\left(\hat s-
-\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}},\hat s+\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}
-\right)$$ with the same probability. Since $S$ is an increasing function we easily derive
+quantile of $N(0,1)$. Then $$P\left(-\lambda_{\alpha/2}<\frac{\hat s-s}{\sigma/\sqrt{N}}<
+\lambda_{\alpha/2}\right)\approx1-\alpha.$$ Equivalently $$P\left(\hat s-
+\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}<s<\hat s+\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}
+\right)\approx1-\alpha.$$ Since $S$ is an increasing function we easily derive
 the confidence interval
-$$\Delta E\in\left(S^{-1}\left(\hat s-\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}\right),
-S^{-1}\left(\hat s+\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}\right)\right)$$
-for $\Delta E=S^{-1}(s)$. Note however that unless $\hat s=0$, $\Delta \hat E$ will not
-lie in the middle of this interval.
+$$P\left(S^{-1}\left(\hat s-\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}\right)<\Delta E<
+S^{-1}\left(\hat s+\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}\right)\right)\approx1-\alpha$$
+for $\Delta E=S^{-1}(s)$. Note however that unless $\hat s=0$, this interval will not be
+centered around $\Delta\hat E=S^{-1}(\hat s)$.
 
 \subsection{Centered Approximate Confidence Intervals}
 We will take two approaches. The first approach assumes that the Elo difference is small
-and that $N$ is large. The second approach only assumes that $N$ is large.
+and that $N$ is large. The second approach assumes only that $N$ is large.
 
-We begin with the first approach. We have $s=S(\Delta E)$. We expand $S$ in its first
-order Taylor polynomial around $0$. We get $$s=S(\Delta E)=S(0)+\Delta ES'(0)=\frac12+
-\Delta E\frac{\log10}{1600}.$$ Solving for $\Delta E$ gives
-$$\Delta E=\frac{1600}{\log10}\left(s-\frac12\right).$$
-
-Starting with the confidence interval $$s\in\left(\hat s-
-\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}},\hat s+\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}
-\right)$$ from \Cref{confidence}, we subtract $\frac12$ and multiply by the constant
+We begin with the first approach. We have $s=S(\Delta E)$. Expanding $S$ in its first
+order Taylor polynomial around $0$ implies $$s=S(\Delta E)\approx S(0)+\Delta ES'(0)=\frac12+
+\Delta E\frac{\log10}{1600}.$$ Solving for $\Delta E$ then gives
+$$\Delta E\approx\frac{1600}{\log10}\left(s-\frac12\right).$$
+Starting with the confidence interval $$P\left(\hat s-\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}
+<s<\hat s+\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}\right)\approx1-\alpha$$ from
+\Cref{confidence}, we subtract $\frac12$ and multiply by the constant
 $\beta=\frac{1600}{\log10}$. This gives
-$$\beta\left(s-\frac12\right)\in\left(\beta\left(\hat s-\frac12\right)-
-\frac{\beta\lambda_{\alpha/2}\sigma}{\sqrt{N}},\beta\left(\hat s-\frac12\right)+
-\frac{\beta\lambda_{\alpha/2}\sigma}{\sqrt{N}}\right).$$ The assumption that $\Delta E$
-is small now gives $$\Delta E\in\left(\Delta\hat E-
-\frac{\beta\lambda_{\alpha/2}\sigma}{\sqrt{N}},\Delta\hat E+
-\frac{\beta\lambda_{\alpha/2}\sigma}{\sqrt{N}}\right).$$
+$$P\left(\beta\left(\hat s-\frac12\right)-\frac{\beta\lambda_{\alpha/2}\sigma}
+{\sqrt{N}}<\beta\left(s-\frac12\right)<\beta\left(\hat s-\frac12\right)+
+\frac{\beta\lambda_{\alpha/2}\sigma}{\sqrt{N}}\right)\approx1-\alpha.$$
+The assumption that $\Delta E$ is small now gives $$P\left(\Delta\hat E-
+\frac{\beta\lambda_{\alpha/2}\sigma}{\sqrt{N}}<\Delta E<\Delta\hat E+
+\frac{\beta\lambda_{\alpha/2}\sigma}{\sqrt{N}}\right)\approx1-\alpha.$$
 
 For the second approach we start from
-$$\Delta E\in\left(S^{-1}\left(\hat s-\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}\right),
-S^{-1}\left(\hat s+\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}\right)\right).$$
+$$P\left(S^{-1}\left(\hat s-\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}\right)<\Delta E<
+S^{-1}\left(\hat s+\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}\right)\right)\approx1-\alpha.$$
 We now instead expand $S^{-1}$ in its first order Taylor polynomial around $s=\hat s$.
 We simply get $$S^{-1}\left(\hat s\pm\frac{\lambda_{\alpha/2}
-\sigma}{\sqrt{N}}\right)=S^{-1}\left(\hat s\right)+\left(\hat s\pm\frac{\lambda_{\alpha/2}
-\sigma}{\sqrt{N}}-\hat s\right)S^{-1}{'}\left(\hat s\right)=$$$$
+\sigma}{\sqrt{N}}\right)$$$$\approx S^{-1}\left(\hat s\right)+\left(\hat s\pm\frac{\lambda_{\alpha/2}
+\sigma}{\sqrt{N}}-\hat s\right)S^{-1}{'}\left(\hat s\right)$$$$=
 \Delta\hat E\pm\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}\frac1{S'\left(\Delta\hat E\right)}.$$
-This implies that $$\Delta E\in\left(\Delta\hat E-\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}
-\frac1{S'\left(\Delta\hat E\right)},\Delta\hat E+\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}
-\frac1{S'\left(\Delta\hat E\right)}\right).$$
+This implies $$P\left(\Delta\hat E-\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}
+\frac1{S'\left(\Delta\hat E\right)}<\Delta E<\Delta\hat E+\frac{\lambda_{\alpha/2}\sigma}{\sqrt{N}}
+\frac1{S'\left(\Delta\hat E\right)}\right)\approx1-\alpha.$$
 
 \bibliographystyle{plain}
 \bibliography{\jobname}
