Make it possible to run testbit as daemons

--- a/README
+++ b/README
@@ -31,3 +31,6 @@ In addition testbitd needs testbit to have a password as this will be used for
 authentication. Create it using
 
 	# passwd testbit
+
+If testbitn is run in daemon mode it needs the file /etc/testbit.conf containing
+a single integer of cpu cores to use.
